pip install whitenoise

--- a/djangobasics.ipynb
+++ b/djangobasics.ipynb
@@ -751,7 +751,578 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "we can define new urlpatterns in the urls.py file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we should write a proper name for a url, so that it's easier to reference and change if needed in the future"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`path('<movie_id>', views.detail, name='movies_detail')`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "django automatically extracts \"movie_id\" and sends it as a variable to the view function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "prefixing with **int:** converts the incoming data to int, makes sure that non int values aren't accepted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`path('<int:movie_id>', views.detail, name='movies_detail')`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting a Single Object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create view function **detail** in views.py file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def detail(request, movie_id):\n",
+    "    movie = Movie.objects.get(pk=movie_id)\n",
+    "    return render(request, 'movies/detail.html', {'movie': movie})\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create the template **details.html**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{% extends 'base.html' %}\n",
+    "{% block content %}\n",
+    "    <dl>\n",
+    "        <dt>Title</dt>\n",
+    "        <dd>{{movie.title}}</dd>\n",
+    "        <dt>Genre</dt>\n",
+    "        <dd>{{movie.genre}}</dd>\n",
+    "        <dt>Stock</dt>\n",
+    "        <dd>{{movie.number_in_stock}}</dd>\n",
+    "    </dl>\n",
+    "{% endblock content %}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Raising 404 errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wrap the code inside the view function in a try except block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def detail(request, movie_id):\n",
+    "    try:\n",
+    "        movie = Movie.objects.get(pk=movie_id)\n",
+    "        return render(request, 'movies/detail.html', {'movie': movie})\n",
+    "    except Movie.DoesNotExist:\n",
+    "        raise Http404() # need to import Http404 class from django.http\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the above code, adding the try except blocks in all view functions is repetitive, we have a Django shortcut for that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def detail(request, movie_id):\n",
+    "    movie = get_object_or_404(klass=Movie, pk=movie_id)\n",
+    "    return render(request, 'movies/detail.html', {'movie': movie})\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "klass is the Model class we need to fetch the object from, the get_object_or_404 method automatically throws a 404 exception if the object is not found"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencing the URLs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "add anchor tags to the names in the table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "< td>< a href=\"/movies/{{movie.id}}\">{{movie.title}}< /a>< /td>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "not the best approach, we might need to change the url in the future, so we use the url template tag instead and reference the names from the view functions in the urls.py file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "< td>< a href=\"{% url 'movies_detail'**(url name)** movie.id **(optional parameters)**%}\">{{movie.title}}< /a>< /td>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can include a variable `app_name = 'movies'` in the urls.py file, so that we don't have to prefix every path name with movies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now, in the index.html, we use `movies:detail` instead of `movies_detail` for referencing the url path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating APIs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can use either **django-tastypie** or **djangorestframework** for creating APIs using Django, tastypie is simpler, we're gonna use it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install django-tastypie`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a new Django app in this project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`python ./manage.py startapp api`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now register the new app in settings.py file in the main (vidly) app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "INSTALLED_APPS = [\n",
+    "    'django.contrib.admin',\n",
+    "    'django.contrib.auth',\n",
+    "    'django.contrib.contenttypes',\n",
+    "    'django.contrib.sessions',\n",
+    "    'django.contrib.messages',\n",
+    "    'django.contrib.staticfiles',\n",
+    "    'movies.apps.MoviesConfig',\n",
+    "    'api.apps.ApiConfig'\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in the models.py file, we need to create a resource, which we will expose to the world using the url, of the API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tastypie looks for an inner Meta class and some other formalities, thus we need to set it up accordingly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "class MovieResource(ModelResource):\n",
+    "    class Meta:\n",
+    "        queryset = Movie.objects.all()\n",
+    "        resource_name = 'movies'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we need to set the url endpoints, in the main vidly app, include the MovieResource and instantiate it using a variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "movie_resource = MovieResource()\n",
+    "urlpatterns = [\n",
+    "    path('admin/', admin.site.urls),\n",
+    "    path('movies/', include('movies.urls')),\n",
+    "    path('api/', include(movie_resource.urls))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can set the exclude attribute in the MovieResource's meta class, to exclude any data we want"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "class MovieResource(ModelResource):\n",
+    "    class Meta:\n",
+    "        queryset = Movie.objects.all()\n",
+    "        resource_name = 'movies'\n",
+    "        excludes = ['date_created']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding the Homepage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the moment we add any other url pattern other than the default admin one, django stops showing the default homepage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a new views.py file in the vidly app, add a home view function in it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now map this view function to a url endpoint in the urls.py file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### vidly folder by default is NOT an app, it looks like an app but it is not one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "thus, if we need to add the home page in a templates folder in the vidly folder, we need to first register it as an app, OR we can save all the general templates (home, about, contact, etc.) in the templates folder in the base directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "extend the base template in the home.html template, add a link to the movies page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparing for Deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can deploy on any of\n",
+    "- heroku\n",
+    "- digitalocean\n",
+    "- AWS\n",
+    "- Google Cloud\n",
+    "- Microsoft Azure\n",
+    "- etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "install the following\n",
+    "- heroku cli\n",
+    "- git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we need to install **gunicorn** which is a popular webserver for python applications, as we can't use the lightweight development server in the production environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install gunicorn`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now, in the root directory, we need to add **Procfile**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`web: gunicorn vidly.wsgi`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tells heroku that we need a **web** process, and to use **gunicorn** command to run our server, and the name of the module to start the app, i.e. **vidly.wsgi**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we need to prepare the static files for deployment, django admin has static files, we need to bring that to our current directory.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in vidly folder, settings.py, define new variable `STATIC_ROOT = od.path.join(BASE_DIR, 'static')`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "also create a static folder in the base directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`python .\\manage.py collectstatic`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "collects all static files into our static folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to serve all the static files to heroku, we need another package called **whitenoise**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install whitenoise`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enable whitenoise middleware, check (https://whitenoise.evans.io/en/stable/django.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`git init`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`git add .`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`git commit -m \"first commit\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we need to create a heroku app using heroku CLI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`heroku login`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`heroku create`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`git push heroku master`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to tell heroku to allocate one web server to this application\n",
+    "\n",
+    "`heroku ps:scale web=1`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in the settings.py, add the address of our website to `ALLOWED_HOSTS`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "commit everything to local repo and push to heroku"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## deployed !!"
+   ]
   }
  ],
  "metadata": {
