finish ipynb file

--- a/djangobasics.ipynb
+++ b/djangobasics.ipynb
@@ -1321,6 +1321,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`heroku open`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## deployed !!"
    ]
   }
